--- a/app/build.gradle
+++ b/app/build.gradle
@@ -53,18 +53,24 @@ dependencies {
     implementation 'androidx.navigation:navigation-fragment-ktx:2.0.0'
     implementation 'androidx.navigation:navigation-ui-ktx:2.0.0'
 
+    //google maps
     implementation 'com.google.android.gms:play-services-maps:17.0.0'
-    implementation 'com.getbase:floatingactionbutton:1.10.1'
+    //kotlin coroutines
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.3.5'
 
+    //3rd party libraries
     implementation 'com.google.code.gson:gson:2.8.6'
     implementation 'com.squareup.retrofit2:retrofit:2.7.2'
     implementation 'com.squareup.retrofit2:converter-gson:2.7.2'
+    //extending floating action button
+    implementation 'com.getbase:floatingactionbutton:1.10.1'
+    //material dialogs
+    implementation 'com.afollestad.material-dialogs:core:3.2.1'
+
 
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
-
     androidTestImplementation 'androidx.test:runner:1.1.0'
     androidTestImplementation 'androidx.test:rules:1.1.0'
 
