--- a/app/build.gradle
+++ b/app/build.gradle
@@ -66,6 +66,7 @@ dependencies {
     implementation 'com.getbase:floatingactionbutton:1.10.1'
     //material dialogs
     implementation 'com.afollestad.material-dialogs:core:3.2.1'
+    implementation 'com.afollestad.material-dialogs:datetime:3.2.1'
 
 
     testImplementation 'junit:junit:4.12'
