--- a/app/build.gradle
+++ b/app/build.gradle
@@ -68,6 +68,10 @@ dependencies {
     implementation 'com.afollestad.material-dialogs:core:3.2.1'
     implementation 'com.afollestad.material-dialogs:datetime:3.2.1'
 
+    //This library allows to create simple popup menus programmatically with a nice type-safe builder syntax in Kotlin.
+    //https://github.com/zawadz88/MaterialPopupMenu
+    implementation 'com.github.zawadz88.materialpopupmenu:material-popup-menu:4.0.1'
+
 
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
