--- a/app/build.gradle
+++ b/app/build.gradle
@@ -76,6 +76,10 @@ dependencies {
     //gms-location for current location updates
     implementation 'com.google.android.gms:play-services-location:17.0.0'
 
+    //material spinner - hint can be added
+    //https://github.com/jaredrummler/MaterialSpinner
+    implementation 'com.jaredrummler:material-spinner:1.3.1'
+
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
