--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.undef.fitapp">
-    <uses-permission android:name="android.permission.INTERNET"/>
-    <!--gps permissions -->
-    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
-    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
+
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
 
     <application
         android:icon="@mipmap/ic_launcher"
@@ -13,23 +13,26 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
 
-        <meta-data android:name="com.google.android.geo.API_KEY" android:value="@string/gmaps_api_key"/>
+        <meta-data
+            android:name="com.google.android.geo.API_KEY"
+            android:value="@string/gmaps_api_key" />
 
+        <activity
+            android:name=".ui.mapexc.previous.GpsExerciseViewer"
+            android:label="@string/title_activity_gps_exercise_viewer"></activity>
+        <activity android:name=".ui.mapexc.previous.PreviousGpsExercises" />
         <activity
             android:name=".ui.createprofile.CreateProfileActivity"
             android:label="@string/title_activity_create_profile"
             android:theme="@style/AppTheme.NoActionBar" />
         <activity
-
             android:name=".ui.diary.HomeActivity"
             android:label="@string/title_activity_home"
-            android:theme="@style/AppTheme.NoActionBar" >
-
-        </activity>
-        <activity android:name=".ui.diary.SearchMnEActivity"
-            android:theme="@style/AppTheme.NoActionBar">
-        </activity>
-        <activity android:name=".ui.createprofile.LoginActivity" >
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity
+            android:name=".ui.diary.SearchMnEActivity"
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity android:name=".ui.createprofile.LoginActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -37,7 +40,6 @@
             </intent-filter>
         </activity>
         <activity android:name=".ui.diary.EditMealActivity" />
-
     </application>
 
 </manifest>
